# c_forensic

./: CMakeLists.txt  README.md  vimrc
basics/: CMakeLists.txt  heap_example.c  liste  no1.c  pointer_types2.c  scope.c  scope2.c  scope3.c
crypt/: CMakeLists.txt  crypt_crack.c  crypt_test.c
memory/: CMakeLists.txt
network/: CMakeLists.txt  readme.md
network/attack/: host_lookup.c
network/server/: simple_server.c
system/: .CMakeLists.txt.swp  CMakeLists.txt  fcntl_flags.c  uid_demo.c  uid_demo.md
