#[[------------------------------------------

	-------------------------------
	sg-0's cmake script
	-------------------------------
	
	Project: Generic

---------------------------------------------]]# 

#SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -lcrypt")

#add_executable(crypt_crack crypt_crack.c)
#add_executable(crypt_test crypt_test.c)
#add_executable(ppm_gen ppm_gen.c)
#add_executable(ppm_crack ppm_crack.c)
add_executable(fms fms.c)

#target_compile_options(crypt_crack PUBLIC -lcrypt)
#target_compile_options(crypt_test PUBLIC -lcrypt)

