#[[------------------------------------------

	-------------------------------
	sg-0's cmake script
	-------------------------------
	
	Project: Generic

---------------------------------------------]]# 

add_executable(errorchecked_heap errorchecked_heap.c)
add_executable(memory_segments memory_segments.c)
add_executable(stack_example stack_example.c)
add_executable(static static.c)
add_executable(static2 static2.c)
